--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,46 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title class="text-center">Plert</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <ion-list>
+    
+    <ion-item>
+      <ion-toggle checked="true"></ion-toggle>
+      <ion-label>
+        <h2>Work Hsinchu</h2>
+        <p>Family</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-toggle checked="true"></ion-toggle>
+      <ion-label>
+        <h2>National Tsing Hua University</h2>
+        <p>Family | Erick, Melody</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-toggle checked="false"></ion-toggle>
+      <ion-label>
+        <h2>Work Taipei</h2>
+        <p>Family</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-toggle checked="true"></ion-toggle>
+      <ion-label>
+        <h2>Costco Hsinchu</h2>
+        <p>| Erick, Melody, Melody</p>
+      </ion-label>
+    </ion-item>
+
+  </ion-list>
+  <ion-fab right bottom>
+    <button ion-fab color="danger"><ion-icon name="add"></ion-icon></button>
+  </ion-fab>
 </ion-content>
