Changing names of tabs

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,10 +1,8 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Contact
-    </ion-title>
-  </ion-navbar>
-</ion-header>
+    <ion-navbar>
+      <ion-title class="text-center">Plert</ion-title>
+    </ion-navbar>
+  </ion-header>
 
 <ion-content>
   <ion-list>
