--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -41,6 +41,6 @@
 
   </ion-list>
   <ion-fab right bottom>
-    <button ion-fab color="danger"><ion-icon name="add"></ion-icon></button>
+    <button ion-fab color="danger" [navPush]="onClickNewAlert"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
