--- a/src/pages/new-alert/new-alert.html
+++ b/src/pages/new-alert/new-alert.html
@@ -11,13 +11,11 @@
   </ion-navbar>
 
 </ion-header>
-
-
 <ion-content padding>
   <ion-list>
     <ion-item>
       <ion-label color="primary">Alert Name</ion-label>
-      <ion-input placeholder="Text Input"></ion-input>
+      <ion-input placeholder="Alert name"></ion-input>
     </ion-item>
 
     <ion-item-group>
