Saving alert and showing in home page

--- a/src/pages/new-alert/new-alert.html
+++ b/src/pages/new-alert/new-alert.html
@@ -12,53 +12,59 @@
 
 </ion-header>
 <ion-content padding>
-  <ion-list>
-    <ion-item>
-      <ion-label color="primary">Alert Name</ion-label>
-      <ion-input placeholder="Alert name"></ion-input>
-    </ion-item>
-
-    <ion-item-group>
-      <br>  
-      <ion-item-divider>Location:</ion-item-divider>
-      <ion-item>
-        <ion-label color="primary">Latitude</ion-label>
-        <ion-label color="primary">{{latitude}}</ion-label>
-      </ion-item>
-
-      <ion-item>
-        <ion-label color="primary">Longitude</ion-label>
-        <ion-label color="primary">{{longitude}}</ion-label>
-      </ion-item>
-    </ion-item-group>
-
-    <ion-item-group>
-      <br>
-      <ion-item-divider>Notify to:</ion-item-divider>
-      <ion-item>
-        <ion-label color="primary">Phone 1</ion-label>
-        <ion-input placeholder=""></ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-label color="primary">Phone 2</ion-label>
-        <ion-input placeholder=""></ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-label color="primary">Phone 3</ion-label>
-        <ion-input placeholder=""></ion-input>
-      </ion-item>
-    </ion-item-group>
-
-    <ion-item-group>
-      <br>  
-      <ion-item-divider>Message:</ion-item-divider>
-      <ion-item>
-        <ion-textarea placeholder="I arrive safe "></ion-textarea>
-      </ion-item>
-    </ion-item-group>
   
-  </ion-list>
+    <ion-list>
+      <form (ngSubmit)="saveAlert()">
+      <ion-item>
+        <ion-label color="primary">Alert Name</ion-label>
+        <ion-input [(ngModel)]="name"  name="name" placeholder="Alert name"></ion-input>
+      </ion-item>
+
+      <ion-item-group>
+        <br>  
+        <ion-item-divider>Location:</ion-item-divider>
+        <ion-item>
+          <ion-label color="primary">Latitude</ion-label>
+          <ion-input disabled="true" [(ngModel)]="latitude" name="latitude" color="primary"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label color="primary">Longitude</ion-label>
+          <ion-input disabled="true" [(ngModel)]="longitude" name="longitude"  color="primary"></ion-input>
+        </ion-item>
+      </ion-item-group>
+
+      <ion-item-group>
+        <br>
+        <ion-item-divider>Notify to:</ion-item-divider>
+        <ion-item>
+          <ion-label color="primary">Phone 1</ion-label>
+          <ion-input type="number" [(ngModel)]="phone1" name="phone1"  placeholder=""></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label color="primary">Phone 2</ion-label>
+          <ion-input type="number" [(ngModel)]="phone2" name="phone2" placeholder=""></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label color="primary">Phone 3</ion-label>
+          <ion-input type="number" [(ngModel)]="phone3" name="phone3" placeholder=""></ion-input>
+        </ion-item>
+      </ion-item-group>
+
+      <ion-item-group>
+        <br>  
+        <ion-item-divider>Message:</ion-item-divider>
+        <ion-item>
+          <ion-textarea [(ngModel)]="message" name="message"  placeholder="I arrive safe "></ion-textarea>
+        </ion-item>
+      </ion-item-group>
+
+      <button ion-button block type="submit">Save</button>
+
+    </form>
+    </ion-list>
+ 
 
 </ion-content>
