--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,40 +7,17 @@
 <ion-content padding>
   <ion-list>
     
-    <ion-item>
+    <ion-item *ngFor="let alert of alerts">
       <ion-toggle checked="true"></ion-toggle>
       <ion-label>
-        <h2>Work Hsinchu</h2>
-        <p>Family</p>
+        <h2>{{alert.name}}</h2>
+        <p>{{alert.message}}</p>
       </ion-label>
     </ion-item>
 
-    <ion-item>
-      <ion-toggle checked="true"></ion-toggle>
-      <ion-label>
-        <h2>National Tsing Hua University</h2>
-        <p>Family | Erick, Melody</p>
-      </ion-label>
-    </ion-item>
-
-    <ion-item>
-      <ion-toggle checked="false"></ion-toggle>
-      <ion-label>
-        <h2>Work Taipei</h2>
-        <p>Family</p>
-      </ion-label>
-    </ion-item>
-
-    <ion-item>
-      <ion-toggle checked="true"></ion-toggle>
-      <ion-label>
-        <h2>Costco Hsinchu</h2>
-        <p>| Erick, Melody, Melody</p>
-      </ion-label>
-    </ion-item>
-
+    
   </ion-list>
   <ion-fab right bottom>
-    <button ion-fab color="danger" [navPush]="onClickNewAlert"><ion-icon name="add"></ion-icon></button>
+    <button ion-fab color="primary" [navPush]="onClickNewAlert"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
