Added alert now button for manual alert

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,6 +17,7 @@
       </ion-item>
       <ion-item-options>
         <button ion-button color="danger" (click)="remove(alert)">Delete</button>
+        <button ion-button (click)="sendAlert(alert)">Alert Now</button>
       </ion-item-options>
     </ion-item-sliding>
 
