Added update of trigger for send alert

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,6 +14,7 @@
           <h2>{{alert.name}}</h2>
           <p>{{alert.message}}</p>
           <p>Distance:{{alert.distance}}</p>
+          <p>Waiting:{{alert.isWaiting}}</p>
         </ion-label>
       </ion-item>
       <ion-item-options>
