--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -5,11 +5,30 @@
   </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
+  <ion-list no-border>
+
+    <ion-list-header>
+      About App
+    </ion-list-header>
+
     <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
+      <ion-icon name='planet' item-start></ion-icon>
+      Name
+      <ion-note item-end>
+      Plert - Place Alert
+      </ion-note>
     </ion-item>
+
+    <ion-item>
+      <ion-icon name='body' item-start></ion-icon>
+      Version
+      <ion-note item-end>
+      0.1 (Beta)
+      </ion-note>
+    </ion-item>
+
+
   </ion-list>
+
+
 </ion-content>
