hide fb segment

--- a/src/pages/new-alert/new-alert.html
+++ b/src/pages/new-alert/new-alert.html
@@ -22,9 +22,9 @@
             <ion-segment-button value="phone">
               Phone
             </ion-segment-button>
-            <ion-segment-button value="facebook">
+            <!-- <ion-segment-button value="facebook">
               Facebook
-            </ion-segment-button>
+            </ion-segment-button> -->
           </ion-segment>
         </div>
         
@@ -41,22 +41,7 @@
               <ion-checkbox color="primary" checked="false" item-end></ion-checkbox>
             </ion-item>
 
-
-            <ion-item>
-              <ion-avatar item-start>
-                  <img src="img/slimer.png">
-              </ion-avatar>
-              <ion-label>Contact2</ion-label>
-              <ion-checkbox color="primary" checked="false" item-end></ion-checkbox>
-            </ion-item>
-
-              <ion-item>
-                <ion-avatar item-start>
-                    <img src="img/slimer.png">
-                </ion-avatar>
-                <ion-label>Contact3</ion-label>
-                <ion-checkbox color="primary" checked="false" item-end></ion-checkbox>
-              </ion-item>  
+ 
           </ion-list>
         
           <ion-list *ngSwitchCase="'facebook'">
