--- a/src/pages/new-alert/new-alert.html
+++ b/src/pages/new-alert/new-alert.html
@@ -18,14 +18,16 @@
         <br>
         <ion-item-divider>Notify to:</ion-item-divider>
 
-        <ion-item *ngFor="let phone of phoneContactList">
-          <ion-avatar item-start>
-              <img src="{{phone.image}}">
-          </ion-avatar>
-          <ion-label>{{phone.name}}</ion-label>
-          <ion-checkbox color="primary" checked="false" item-end></ion-checkbox>
-        </ion-item>
-        
+        <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>  
+        <ion-list>
+          <ion-item *ngFor="let phone of phoneContactList">
+            <ion-avatar item-start>
+                <img src="{{phone.image}}">
+            </ion-avatar>
+            <ion-label>{{phone.name}}</ion-label>
+            <ion-checkbox color="primary" checked="false" item-end></ion-checkbox>
+          </ion-item>
+        </ion-list>    
         <!-- <div padding>
           <ion-segment [(ngModel)]="notificationType" [ngModelOptions]="{standalone: true}">
             <ion-segment-button value="phone">
