--- a/src/pages/view-alert/view-alert.html
+++ b/src/pages/view-alert/view-alert.html
@@ -14,6 +14,37 @@
         <ion-input [(ngModel)]="name"  name="name" placeholder="Alert name"></ion-input>
       </ion-item>
 
+     
+
+      <ion-item-group>
+        <br>
+        <ion-item-divider>Notify to:</ion-item-divider>
+
+        <ion-searchbar [(ngModel)]="queryContact" [ngModelOptions]="{standalone:true}" (ionInput)="getContacts($event)"></ion-searchbar>  
+        <ion-list>
+
+          <ion-item *ngIf="!search">
+            <ion-label>No contacts found</ion-label>
+          </ion-item>
+
+          <ion-item *ngFor="let phone of phoneContactList">
+            <!-- <ion-avatar item-start>
+                <img [src]="phone.image">
+            </ion-avatar> -->
+            <ion-label>{{phone.name}}</ion-label>
+            <ion-checkbox (ionChange)="onChangeContact(phone.number, $event.checked)" color="primary" checked="{{selectedPhones.includes(phone.number)}}" item-end></ion-checkbox>
+          </ion-item>
+        </ion-list>    
+      </ion-item-group>
+
+      <ion-item-group>
+        <br>  
+        <ion-item-divider>Message:</ion-item-divider>
+        <ion-item>
+          <ion-textarea [(ngModel)]="message" name="message"  placeholder="I arrive safe "></ion-textarea>
+        </ion-item>
+      </ion-item-group>
+
       <ion-item-group>
         <br>  
         <ion-item-divider>Location:</ion-item-divider>
@@ -25,33 +56,6 @@
         <ion-item>
           <ion-label color="primary">Longitude</ion-label>
           <ion-input disabled="true" [(ngModel)]="longitude" name="longitude"  color="primary"></ion-input>
-        </ion-item>
-      </ion-item-group>
-
-      <ion-item-group>
-        <br>
-        <ion-item-divider>Notify to:</ion-item-divider>
-        <ion-item>
-          <ion-label color="primary">Phone 1</ion-label>
-          <ion-input type="number" [(ngModel)]="phone1" name="phone1"  placeholder=""></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-label color="primary">Phone 2</ion-label>
-          <ion-input type="number" [(ngModel)]="phone2" name="phone2" placeholder=""></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-label color="primary">Phone 3</ion-label>
-          <ion-input type="number" [(ngModel)]="phone3" name="phone3" placeholder=""></ion-input>
-        </ion-item>
-      </ion-item-group>
-
-      <ion-item-group>
-        <br>  
-        <ion-item-divider>Message:</ion-item-divider>
-        <ion-item>
-          <ion-textarea [(ngModel)]="message" name="message"  placeholder="I arrive safe "></ion-textarea>
         </ion-item>
       </ion-item-group>
 
