--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,7 +14,8 @@
           <h2>{{alert.name}}</h2>
           <p>{{alert.message}}</p>
           <p>Distance:{{alert.distance}}</p>
-          <p>Waiting:{{alert.isWaiting}}</p>
+          <p>Contacts:{{alert.phones.length}}</p>
+          <!-- <p>Waiting:{{alert.isWaiting}}</p> -->
         </ion-label>
       </ion-item>
       <ion-item-options>
