--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,23 +6,31 @@
 
 <ion-content padding>
   <ion-list>
-    
-    <ion-item-sliding *ngFor="let alert of alerts">
-      <ion-item>
-        <ion-toggle [(ngModel)]="alert.status" (ionChange)="updateAlerts()"></ion-toggle>
-        <ion-label (click)="onClick(alert)">
-          <h2>{{alert.name}}</h2>
-          <p>{{alert.message}}</p>
-          <p>Distance:{{alert.distance}}</p>
-          <p>Contacts:{{alert.phones.length}}</p>
-          <!-- <p>Waiting:{{alert.isWaiting}}</p> -->
-        </ion-label>
-      </ion-item>
-      <ion-item-options>
-        <button ion-button color="danger" (click)="remove(alert)">Delete</button>
-        <button ion-button (click)="sendAlert(alert)">Alert Now</button>
-      </ion-item-options>
-    </ion-item-sliding>
+    <ion-card (click)="onClick(alert)" *ngFor="let alert of alerts">
+          <ion-item>
+            <h2>{{alert.name}} <span ion-text right color="secondary" class="item-bold">({{alert.distance}} m)</span></h2>
+            
+          </ion-item>
+          <ion-item>
+            <ion-icon color="subtle" item-start name='text'></ion-icon>
+            <p>{{alert.message}}</p>
+          </ion-item>
+          <ion-item>
+              <ion-icon color="subtle" item-start name='people'></ion-icon>
+              <p>{{alert.phones.length}}</p>
+            </ion-item>
+          <ion-item actions>
+            <button ion-button color="danger" (click)="remove(alert)" clear item-end icon-start>
+              <ion-icon name='trash'></ion-icon>
+              Delete
+            </button>
+            <button ion-button color="secondary" (click)="sendAlert(alert)" clear item-end icon-start>
+                <ion-icon name='notifications'></ion-icon>
+                Alert Now
+              </button>
+            <ion-toggle right top [(ngModel)]="alert.status" (ionChange)="updateAlerts()"></ion-toggle>
+          </ion-item>
+  </ion-card>
  </ion-list>
   <ion-fab right bottom>
     <button ion-fab color="primary" [navPush]="onClickNewAlert" ><ion-icon name="add"></ion-icon></button>
