--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Alerts" tabIcon="notifications"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Locations" tabIcon="locate"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="About" tabIcon="contacts"></ion-tab>
+  <!-- <ion-tab [root]="tab2Root" tabTitle="Locations" tabIcon="locate"></ion-tab> -->
+  <ion-tab [root]="tab3Root" tabTitle="Settings" tabIcon="cog"></ion-tab>
 </ion-tabs>
