--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+  <!-- Maps script -->
+  <script src="http://maps.google.com/maps/api/js?key=AIzaSyDdE7zmZF-VzrQkJYnL6SQ2tIIVHnFEzvA"></script>
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
 
