--- a/src/pages/people/people.html
+++ b/src/pages/people/people.html
@@ -7,12 +7,67 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>people</ion-title>
+    <ion-title>Plert</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <ion-list>
+        <ion-row radio-group [(ngModel)]="addBy">
+        <ion-col>
+          <ion-item>
+            Search By
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <ion-item>
+            <ion-label>Id</ion-label>
+            <ion-radio value="1"></ion-radio>
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <ion-item>
+           <ion-label>Email</ion-label>
+            <ion-radio value="2"></ion-radio>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+     
+    <ion-searchbar #searchbar placeholder="Search"></ion-searchbar>
+    <br/>
+    <ion-item-divider></ion-item-divider>
 
+    <ion-item>
+      <ion-avatar item-start>
+          <img src="assets/imgs/melody.png">
+      </ion-avatar>
+      <ion-label>Melody Huang</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-avatar item-start>
+          <img src="assets/imgs/mary.jpg">
+      </ion-avatar>
+      <ion-label>Mary Salazar</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-avatar item-start>
+          <img src="assets/imgs/ana.jpg">
+      </ion-avatar>
+      <ion-label>Ana Vega</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-avatar item-start>
+          <img src="assets/imgs/rafael.jpg">
+      </ion-avatar>
+      <ion-label>Rafael Salazar</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-avatar item-start>
+          <img src="assets/imgs/erick.jpg">
+      </ion-avatar>
+      <ion-label>Erick Salinas</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
