Added radius to map when creating alert

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -61,7 +61,7 @@
         
         <ion-grid no-padding>
           <ion-row >
-              <img class="mapImg" src="https://maps.googleapis.com/maps/api/staticmap?center=24.790669773740376,120.99380961125091&zoom=18&size=600x300&maptype=roadmap&markers=color:orange%7Clabel:P%7C24.790669773740376,120.99380961125091" alt="Home">
+              <img class="mapImg" src="https://maps.googleapis.com/maps/api/staticmap?center=24.790669773740376,120.99380961125091&zoom=18&size=600x300&maptype=roadmap&markers=color:orange%7Clabel:P%7C24.790669773740376,120.99380961125091&key=AIzaSyDdE7zmZF-VzrQkJYnL6SQ2tIIVHnFEzvA" alt="Home">
           </ion-row>
           <ion-row justify-content-center>
             
