--- a/src/pages/new-alert/new-alert.html
+++ b/src/pages/new-alert/new-alert.html
@@ -24,7 +24,9 @@
         <ion-item>
             <ion-label color="primary">Radius</ion-label>
             <ion-select [ngModelOptions]="{standalone:true}" [(ngModel)]="plertDistance">
+              <ion-option value="50">50 m</ion-option>
               <ion-option value="100">100 m</ion-option>
+              <ion-option value="250">250 m</ion-option>
               <ion-option value="500">500 m</ion-option>
               <ion-option value="1000">1000 m</ion-option>
             </ion-select>
