Added login and google sign in logic. Not implemented yet

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -97,6 +97,13 @@
       </ion-note>
     </ion-item>
 
+    <br />
+    <br />
+    <ion-row justify-content-center> 
+        <google-login></google-login>
+        <button ion-button block type="submit">Log out</button>
+    </ion-row>
+
 
   </ion-list>
 
