--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,5 +14,9 @@
 
 
 <ion-content padding>
-
+  <ion-grid>
+    <ion-row justify-content-center> 
+        <google-login></google-login>
+    </ion-row>
+  </ion-grid>
 </ion-content>
